# AI_Agent_OLLAMA

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: __init__.py  bale_bot.py  bot.py  brain.py  config.py  providers.py  storage.py  tools.py
tests/: test_bot_artifacts.py  test_brain.py  test_providers.py  test_screenshot.py  test_storage.py  test_tools.py  test_windows_commands.py
