[project]
name = "persian-ollama-coding-agent"
version = "1.0.0"
description = "A secure Telegram coding agent powered by local Ollama"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot[rate-limiter]>=21.0,<22",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
