[project]
name = "persian-ollama-coding-agent"
version = "2.0.0"
description = "A secure, provider-flexible Persian Telegram coding and workspace agent"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot[rate-limiter]>=21.0,<22",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "Pillow>=10.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.45,<2"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
